force-app/main/default/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City field for student object</description>
    <label>City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>