force-app/main/default/objects/Student__c/fields/Expected_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Graduation_Year__c</fullName>
    <description>Captures the expected graduation year for each student in the mentorship program. Used for cohort grouping in reports and dashboards.</description>
    <label>Expected Graduation Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>