force-app/main/default/objects/Student__c/fields/Progress_Score__c.field-meta.xml
<CustomField>
    <fullName>Progress_Score__c</fullName>
    <label>Progress Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>